add select transaction, balance, extract feature, convert to image

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,9 @@
 /Normal_address_raw.csv
 /Transaction_raw.csv
 /Transaction_raw_checkpoint.csv
+/Transaction_raw_backup2.csv
 /Normal_address_raw-checkpoint.csv
+/final_transaction_dataset.csv
+/graph_transaction_dataset.csv
+/balanced_transaction_dataset.csv
+/used_normal_address.csv
