--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,9 @@
-/Abnormal_address_raw.csv
-/Normal_address_raw.csv
-/Transaction_raw.csv
-/Transaction_raw_checkpoint.csv
-/Transaction_raw_backup2.csv
-/Normal_address_raw-checkpoint.csv
-/final_transaction_dataset.csv
-/graph_transaction_dataset.csv
-/balanced_transaction_dataset.csv
-/used_normal_address.csv
-/extract_feature_address.csv
-/balanced_transaction-from-to-prefix.csv
 /ImageData
 __pycache__/
 venv/
 .idea/
 .ipynb_checkpoints/
 Result-ML/
+/*.csv
+Logs
+old-code
